samples/errors/infinite_type.opal
;; Error: occurs check — `f` applied to itself produces an infinite type
(let f {x} (f f))
